--- a/reservation_gv/reservation_app_gv/templates/rooms.html
+++ b/reservation_gv/reservation_app_gv/templates/rooms.html
@@ -57,13 +57,13 @@
 
                 <td class="col-1">
 
-                    <a href="/room/modify/{{ room.id }}/">edytuj</a>
+                    <a href="/modifyroom/{{ room.id }}/">edit</a>
 
                 </td>
 
                 <td class="col-1">
 
-                    <a href="/room/delete/{{ room.id }}/">usuń</a>
+                    <a href="/deleteroom/{{ room.id }}/">delete</a>
 
                 </td>
 
