--- a/reservation_gv/reservation_app_gv/templates/rooms.html
+++ b/reservation_gv/reservation_app_gv/templates/rooms.html
@@ -69,7 +69,7 @@
 
                 <td class="col-1">
 
-                    <a href="/room/reserve/{{ room.id }}/">book it</a>
+                    <a href="/roomreserve/{{ room.id }}/">book it</a>
 
                 </td>
 
