--- a/reservation_gv/reservation_app_gv/templates/rooms.html
+++ b/reservation_gv/reservation_app_gv/templates/rooms.html
@@ -30,7 +30,7 @@
 
                 <td class="col-2">
 
-                    <a href="/room/{{ room.id }}/">{{ room.name }}</a>
+                    <a href="/roomdetails/{{ room.id }}/">{{ room.name }}</a>
 
                 </td>
 
