--- a/reservation_gv/reservation_app_gv/templates/conferenceroom_details_view.html
+++ b/reservation_gv/reservation_app_gv/templates/conferenceroom_details_view.html
@@ -12,16 +12,18 @@
                     <span style="color:red;">&#9746;</span>
 
                 {% endif %}</li>
+    </ul>
+        <ul>
 
-      {% for reservation in object_list %}
+      {% for room in object_list %}
 
-                    <li class="list-group-item">
 
-                        <h4>{{ reservation.date }}</h4>
 
-                        <p>{{ reservation.comment }}</p>
+                        <li>{{ room.reservation_date }}</li>
 
-                    </li>
+                        <li>{{ room.reservation_comment }}</li>
+
+                    </ul>
 
                 {% endfor %}
 
