--- a/reservation_gv/reservation_app_gv/templates/base.html
+++ b/reservation_gv/reservation_app_gv/templates/base.html
@@ -46,7 +46,7 @@
 
             <a class="nav-item nav-link" href="/">List of all rooms<span class="sr-only">(current)</span></a>
 
-            <a class="nav-item nav-link" href="/room/new/">Add a room</a>
+            <a class="nav-item nav-link" href="/addroom/">Add a room</a>
 
         </div>
 
