--- a/reservation_gv/reservation_app_gv/templates/conferenceroom_details_view.html
+++ b/reservation_gv/reservation_app_gv/templates/conferenceroom_details_view.html
@@ -13,22 +13,21 @@
 
                 {% endif %}</li>
     </ul>
-        <ul>
+       <ul class="list-group">
 
-      {% for room in object_list %}
+                {% for reservation in reservations %}
 
+                    <li class="list-group-item">
 
+                        <h4>{{ reservation.date }}</h4>
 
-                        <li>{{ room.reservation_date }}</li>
+                        <p>{{ reservation.comment }}</p>
 
-                        <li>{{ room.reservation_comment }}</li>
-
-                    </ul>
+                    </li>
 
                 {% endfor %}
 
-
-    </ul>
+            </ul>
 
 <ul>
 
